--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/d1sc0/sjm-api-proxy/issues"
   },
-  "homepage": "https://github.com/d1sc0/sjm-api-proxy#readme"
+  "homepage": "https://github.com/d1sc0/sjm-api-proxy#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "request": "^2.88.2"
+  }
 }
